# DES-WebApp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
des_project/: .env  celery.py  settings.py  urls.py
docker/: app.Dockerfile  devproxy-nginx.conf  devproxy.Dockerfile  frontend.Dockerfile
simulation_frontend/: package-lock.json  package.json
simulation_frontend/src/: App.css  App.tsx  index.css
simulation_frontend/src/features/EntityPalette/: EntityPalette.tsx
simulation_frontend/src/features/ParameterForm/: ParameterForm.tsx
simulation_frontend/src/features/ResultsDisplay/: ResultsDisplay.tsx
simulation_frontend/src/features/SimulationCanvas/: SimulationCanvas.tsx
simulation_frontend/src/features/SimulationControl/: SimulationControl.tsx
simulation_frontend/src/store/: store.ts
simulation_frontend/src/store/slices/: simulationSlice.ts
simulation_frontend/src/types/: common.ts  simulation.ts
simulations/: admin.py  models.py  serializers.py  simulation_runner.py  tasks.py  urls.py  views.py
simulations/migrations/: 0001_initial.py
simulations/simulations_logic/: __init__.py  financial_simulations.py
